--- a/FrontEnd/style.css
+++ b/FrontEnd/style.css
@@ -49,17 +49,21 @@ a{
     margin-left: 5px; 
 }
 #img-main{
-    width: 120%;
+    width: 100%;
     height: 100%;
+    padding-top: 8%;
 }
 #content-main img{
+    display: flex;
+    justify-content: end;
+
     justify-content: center;
 }
 .tit-oferta{
     font-family: "Allura", cursive;
     font-size: 30px;
 }
-.oferta-1, .oferta-2{
+.oferta-1{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -68,6 +72,15 @@ a{
     border-radius: 20px 20px;
     width: 70%;
     height: 20%;
+}
+.oferta-2{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #D9D9D9;
+    border-radius: 20px 20px;
+    width: 70%;
+    height: 22%;
 }
 .oferta-1{
     position: relative;
@@ -78,8 +91,9 @@ a{
 .oferta-2{
     position:relative;
     top: 60%;
+    right: 60px;
     font-family: "Caladea", serif;
-    font-size: 20px;
+    font-size: 18px;
     text-indent: 20px;
 }
 .conteudo-oferta{
@@ -106,8 +120,14 @@ a{
 }
 .titulo{
     text-align: center;
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+.titulo h2 a{
     font-family: "Caladea", serif;
-    margin-top: 30px;
+    font-style: normal;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+
 }
 .barra-fixa{
     position: fixed;
@@ -116,7 +136,10 @@ a{
     width: 100%;
     z-index: 1000;
 }
-
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+    background-image: black;
+}
 /* Esconder elementos quando a tela é minimizada */
 @media only screen and (max-width: 994px) {
     .oferta-1,
@@ -144,9 +167,13 @@ a{
 }
 .pai-roupas{
     display: flex;
-    
+}
+.img-2{
+    height: 100%;
 }
 .card-body-site{
+    font-family: "Actor", serif;
+    font-weight: bold;
     height: 120px;
     background-color: none;
     margin-left: 15px;
@@ -166,4 +193,20 @@ a{
 }
 #menu ul li:hover{
     color: #b11616;
+}
+.p1{
+    text-align: start;
+}
+.p2{
+    text-align: center;
+}
+.p3{
+    text-align: end;
+}
+.conteudo-oferta p{
+    margin: 0;
+    padding: 10px;
+}
+.conteudo-oferta p + p{
+    margin-top: -10px;
 }
