--- a/FrontEnd/style.css
+++ b/FrontEnd/style.css
@@ -8,9 +8,16 @@ body{
 .primeira-navbar{
     background-color: #D9D9D9;
 }
+.segunda-navbar{
+    background-color: #f5f5f5;
+}
+.segunda-navbar ul li{
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
 h1{
     text-align: center;
     font-family: "Kaushan Script", cursive;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 a{
     font-family: "Actor", sans-serif;
@@ -180,8 +187,6 @@ a{
 }
 .card-desc{
     height: 400px;
-    display: flex;
-    flex-direction: column;
     max-width: 18rem;
     margin-bottom: 15px;  
 }
@@ -209,4 +214,260 @@ a{
 }
 .conteudo-oferta p + p{
     margin-top: -10px;
+}
+.linha-compra{
+    display: flex;
+    flex-direction:row ;
+
+}
+.add-car a{
+    text-decoration: none;
+    color: black;
+}
+.add-car{
+    margin-left: 8px;
+    border-style:none;
+    font-size: 12px;
+    width: 180px;
+    height: 20px;
+    background-color: #d9d9d9;
+}
+.add-car:hover{
+    background-color: #f5f5f5;
+}
+.primeiro-rodape{
+    background-color: #d9d9d9;
+    margin-bottom: 2%;
+    margin-top: 5%;
+    height: 220px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.primeiro-rodape p{
+    font-size: 20px;
+}
+.segundo-rodape{
+    background-color: #514B4B;
+    margin-bottom: 4%;
+    height: 190px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.segundo-rodape h3{
+    margin-top: 40px;
+}
+.parte-1{
+    color: #f5f5f5;
+    padding-bottom: 30px;
+}
+.parte-1 p{
+    font-size: 25px;
+    margin-bottom: 20px;
+}
+.sendDados input{
+    padding-right: 20px;
+    margin-right: 10px;
+    background-color: #d9d9d9;
+    border: none;
+    width: 100%;
+    height: 35px;
+}
+.sendDados input:hover{
+    background-color: #E9ECEF;
+}
+#sendNovidade{
+    border: none;
+    background-color: #d9d9d9;
+    margin-top: 10px;
+    width: 120px;
+    text-align: center;
+}
+#sendNovidade:hover{
+    background-color: #E9ECEF;
+}
+@media only screen and (max-width: 991px) {
+    .primeiro-rodape div{
+        font-size: 12px;
+        display: flex;
+        flex-wrap: nowrap;
+    }
+    .primeiro-rodape svg{
+        width: 25px;
+        height: 25px;
+        margin-right: 50px;
+    }
+    .primeiro-rodape h4{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 12px;
+    }
+    .primeiro-rodape p{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 12px;
+        margin-left: 20px;
+    }
+}
+.titulo-rodape h1{
+    left:0;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+.titulo-rodape {
+    margin-bottom: 10px;
+}
+.icon-redes svg{
+    width: 30px;
+    height: 47px;
+    margin-right: 10px;
+}
+#linha{
+    height: 200px; 
+}
+.divide{
+    height: 5px;
+}
+.line{
+    background-color: #000;
+    height: 3px;
+}
+.test {
+    position: relative;
+}
+
+.test::after {
+    content: "";
+    position: absolute;
+    height: 119px;
+    width: 3px;
+    background-color: #000;
+    right: 0;
+    top: 0;
+    border-radius: 5px;
+}
+.quinto-rodape{
+    display: flex;
+}
+.quinto-rodape div{
+    margin-top: 10px;
+}
+.falaLob{
+    justify-content: end;
+}
+
+/*CONFIGS TELA DE LOGIN*/
+.container-login{
+    margin-top: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.container-login h3{
+    font-family: "Actor", sans-serif;
+}
+.container-login h6{
+    font-family: "Actor", sans-serif;
+}
+.desconto h6{
+    color: #ff0404;
+}
+.box-login{
+    width: 30%;
+    height: 100%;
+    background-color: #d9d9d9;
+    font-family: "Abhaya Libre", serif;
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+}
+.box-login a{
+    font-family: "Abhaya Libre", serif;;
+}
+.box-login form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.box-login form input{
+    margin-top: 30px;
+    margin-bottom: 5px;
+    width: 80%;
+    height: 40px;
+    border: none;
+}
+#loginbtn{
+    background-color: #000;
+    color: #f5f5f5;
+    margin-bottom: 20px;
+}
+#loginbtn:hover{
+    background-color: #E9ECEF;
+    color: #000;
+}
+.detalhes{
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 10px;
+    align-items: center;
+    justify-content: center;
+}
+.p{
+    display: flex;
+    flex-direction: row;
+    margin: 0 18px;
+    position: relative;
+    margin-right: px;
+}
+.linha-1{
+    background-color: #000;
+    width: 35%;
+    height: 1px;
+    left: 0;
+}
+.linha-2{
+    background-color: #000;
+    width: 35%;
+    height: 1px;
+    display: flex;
+    justify-content: end;
+    padding: 0;
+}
+.google{
+    background-color: #f5f5f5;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    height: 40px;
+    margin-bottom: 20px;
+}
+.google:hover{
+    background-color: #514b4b9c;
+}
+.google a{
+    text-decoration: none;
+    color: #000;
+}
+.google a:hover{
+    color: #514B4B;
+}
+.cadastro{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.cadastro p{
+    margin-right: 10px;
+}
+.cadastro a{
+    text-decoration: none;
+    color: #df0000;
+}
+.cadastro a:hover{
+    color:#514B4B;
 }
