--- a/FrontEnd/views/cadastroProduto.handlebars
+++ b/FrontEnd/views/cadastroProduto.handlebars
@@ -52,8 +52,8 @@
                             <path d="M3.19178 10.3119C3.59857 10.3119 3.92834 9.9821 3.92834 9.57531C3.92834 9.16852 3.59857 8.83875 3.19178 8.83875C2.78499 8.83875 2.45522 9.16852 2.45522 9.57531C2.45522 9.9821 2.78499 10.3119 3.19178 10.3119Z" stroke="black" stroke-width="0.89875" stroke-linecap="round" stroke-linejoin="round"/>
                             <path d="M9.57531 10.3119C9.9821 10.3119 10.3119 9.9821 10.3119 9.57531C10.3119 9.16852 9.9821 8.83875 9.57531 8.83875C9.16852 8.83875 8.83875 9.16852 8.83875 9.57531C8.83875 9.9821 9.16852 10.3119 9.57531 10.3119Z" stroke="black" stroke-width="0.89875" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>    
-                        <form class="d-flex" role="search">
-                            <input id = "search"class="form-control me-2" type="search" placeholder="Buscar Produtos" aria-label="Search">
+                        <form class="d-flex" role="search" action="/resultadoPesquisa" method="GET">
+                            <input id = "search" name="name" class="form-control me-2" type="search" placeholder="Buscar Produtos" aria-label="Search">
                             <button type="submit" id="search-btn">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                                     <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
