Implementando carrinho de Compras

--- a/FrontEnd/views/login.handlebars
+++ b/FrontEnd/views/login.handlebars
@@ -35,7 +35,7 @@
                         </a>
                     </div>
                     <div class="col-md-5">
-                        <h1>Pesadão</h1>
+                        <a class= "nav-link flex-grow-1" href="/"><h1>Pesadão</h1></a>
                     </div>
                     <div class="col-md-4 d-flex align-items-center">
                         <a href="/login" id = "iconLogin">
@@ -45,13 +45,15 @@
                                 <path d="M1.25 8.5V8.75H8.75V8.5C8.75 7.56658 8.75 7.09987 8.56835 6.74335C8.40856 6.42975 8.15358 6.17477 7.83998 6.01498C7.48346 5.83333 7.01675 5.83333 6.08333 5.83333H3.91667C2.98325 5.83333 2.51654 5.83333 2.16002 6.01498C1.84641 6.17477 1.59144 6.42975 1.43166 6.74335C1.25 7.09987 1.25 7.56658 1.25 8.5Z" fill="white" stroke="black" stroke-width="0.65875" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
                         </a>
-                        <svg width="50" height="30" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M0 0H11.785V11.785H0V0Z" fill="white" fill-opacity="0.01"/>
-                            <path d="M9.5753 7.85667H3.19176L1.96416 2.94625H10.8029L9.5753 7.85667Z" fill="white"/>
-                            <path d="M0.736572 1.47312H1.5959L1.96418 2.94625M1.96418 2.94625L3.19178 7.85667H9.57532L10.8029 2.94625H1.96418Z" stroke="black" stroke-width="0.89875" stroke-linecap="round" stroke-linejoin="round"/>
-                            <path d="M3.19178 10.3119C3.59857 10.3119 3.92834 9.9821 3.92834 9.57531C3.92834 9.16852 3.59857 8.83875 3.19178 8.83875C2.78499 8.83875 2.45522 9.16852 2.45522 9.57531C2.45522 9.9821 2.78499 10.3119 3.19178 10.3119Z" stroke="black" stroke-width="0.89875" stroke-linecap="round" stroke-linejoin="round"/>
-                            <path d="M9.57531 10.3119C9.9821 10.3119 10.3119 9.9821 10.3119 9.57531C10.3119 9.16852 9.9821 8.83875 9.57531 8.83875C9.16852 8.83875 8.83875 9.16852 8.83875 9.57531C8.83875 9.9821 9.16852 10.3119 9.57531 10.3119Z" stroke="black" stroke-width="0.89875" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>    
+                        <a href="/carrinho">
+                            <svg width="50" height="30" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M0 0H11.785V11.785H0V0Z" fill="white" fill-opacity="0.01"/>
+                                <path d="M9.5753 7.85667H3.19176L1.96416 2.94625H10.8029L9.5753 7.85667Z" fill="white"/>
+                                <path d="M0.736572 1.47312H1.5959L1.96418 2.94625M1.96418 2.94625L3.19178 7.85667H9.57532L10.8029 2.94625H1.96418Z" stroke="black" stroke-width="0.89875" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M3.19178 10.3119C3.59857 10.3119 3.92834 9.9821 3.92834 9.57531C3.92834 9.16852 3.59857 8.83875 3.19178 8.83875C2.78499 8.83875 2.45522 9.16852 2.45522 9.57531C2.45522 9.9821 2.78499 10.3119 3.19178 10.3119Z" stroke="black" stroke-width="0.89875" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M9.57531 10.3119C9.9821 10.3119 10.3119 9.9821 10.3119 9.57531C10.3119 9.16852 9.9821 8.83875 9.57531 8.83875C9.16852 8.83875 8.83875 9.16852 8.83875 9.57531C8.83875 9.9821 9.16852 10.3119 9.57531 10.3119Z" stroke="black" stroke-width="0.89875" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                        </a>     
                         <form class="d-flex" role="search">
                             <input id = "search"class="form-control me-2" type="search" placeholder="Buscar Produtos" aria-label="Search">
                             <button type="submit" id="search-btn">
@@ -81,9 +83,6 @@
                         </li>
                         <li class = "nav-item  mr-5">
                             <a class= "nav-link flex-grow-1" href="/#mochilas">Mochilas</a>
-                        </li>
-                        <li class = "nav-item  mr-5">
-                            <a class= "nav-link flex-grow-1" href="/">Home</a>
                         </li>
                     </ul>
                 </div>
