--- a/FrontEnd/views/login.handlebars
+++ b/FrontEnd/views/login.handlebars
@@ -22,7 +22,7 @@
             <div class="navbar navbar-expand-lg primeira-navbar shadow-sm p-2 mb-0  row align-items-center d-flex">
                 <div class="container-fluid">
                     <div class="col-md-3">
-                        <a href="/cadastroProduto">
+                        <a href="/">
                             <svg class = "lobinho" width="180" height="50" viewBox="0 0 41 30" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                 <rect width="41" height="30" fill="url(#pattern0_2044_637)"/>
                                 <defs>
